# software-architecture

./: .gitignore  README.md  chapter14.tex  main.aux  main.blg  main.tex  main.toc
bab/: bab13.tex
chapters/: Chapter12.tex  chapter01.aux  chapter01.tex  chapter02.aux  chapter02.tex  chapter03.aux  chapter03.tex  chapter04.aux  chapter04.tex  chapter04b.tex  chapter05.aux  chapter05.tex  chapter06.aux  chapter06.tex  chapter07.aux  chapter07.tex  chapter08.aux  chapter08.tex  chapter09.aux  chapter09.tex  chapter10.aux  chapter10.tex  chapter11(ODSOA).tex  chapter11.aux  chapter11.tex  chapter12.aux  chapter12.tex  chapter13.aux  chapter13.tex  chapter14.aux  chapter14.tex  chapter9.tex  main.tex
code/Chapter09/: manifest.json
code/chapter 12/: index.js
code/chapter05/: .env  go.mod  readme.md
code/chapter06/: EDA.js
code/chapter07/: chapter07.py
code/chapter10/rust-example/: .env  Cargo.toml  docker-compose.yml
code/chapter10/rust-example/src/: main.rs
code/chapter10/rust-example/templates/: base.html
images/: .$client-server-3-tier.drawio.bkp  client-server-3-tier.drawio  container-vm  convert.py  diagram-EDA.drawio  hexagonal_component_diagram.puml  layered_architecture.puml  layered_architecture_open.puml  mermaid_config.json  microservices-employees.puml  mvc-class.puml  mvc-classic.mmd  mvc-modern.mmd  mvc-sequence.puml  mvc.drawio  mvi-sequence.puml  mvi.mmd  mvp-sequence.puml  mvp.mmd  mvvm-sequence.puml  mvvm.mmd  plugin_architecture.puml  script.py  serverless_architecture.drawio  space-based_architecture.puml
presentasi/: presentasi01.tex
(+376 files in other folders)
